added text color vars

--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -23,6 +23,9 @@ $color-dark-3: #5C5F66
 $color-dark-2: #909296
 $color-dark-1: #A6A7AB
 
+$color-text-2: #c1c2c5
+$color-text-1: #ffffff
+
 //misc
 $misc-borderRadius: 4px
 $misc-boxShadow: rgba(0, 0, 0, 0.18) 0px 2px 4px
